--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ren_backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/ren_db
+spring.datasource.username=postgres
+spring.datasource.password=masterkey
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
