Fixed CORS problems, also made images work

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ bin
 lib
 ren_icon.png
 ren_icon_nobackground.png
+assets
+bank-letter.svg
+bank-logo.png
+bank-logo.svg
+bank-minilogo.svg
+bank-name.svg
+mir-logo-mono.svg
+mir-logo.svg
