--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 		    <artifactId>postgresql</artifactId>
 		    <version>42.2.9</version>
 		</dependency>
+
+		<dependency>
+    	    <groupId>org.apache.xmlgraphics</groupId>
+    	    <artifactId>batik-codec</artifactId>
+    	    <version>1.14</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
