--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=ren_backend
 server.port=8080
+spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-request-size=16MB
